# EvoPM

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: core-design.md  first-use-closed-loop.md  hyperframes-demo-design.md  hyperframes-demo-implementation-plan.md  one-question-loop-implementation-plan.md  one-question-loop.md  orchestration-triage.md  vhs-demo-design.md  vhs-demo-implementation-plan.md
docs/demo/: evopm-triage.tape
docs/demo/hyperframes/: index.html
examples/: quarterly-report.json
src/evopm/: __init__.py  __main__.py  cli.py  model.py  render.py  triage.py
templates/: decision-card.md
tests/: test_cli.py  test_model.py  test_triage.py
